p2/confs/app2.yaml

# Service
apiVersion: v1
kind: Service
metadata:
  name: service-app2
  labels:
    app: web-app-2
spec:
  selector:
    app: web-app-2
  ports:
    - protocol: TCP
      port: 80        # Exposed service port
      targetPort: 80  # Listened service port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ahenault-app2
  labels:
    app: web-app-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app-2
  template:
    metadata:
      labels:
        app: web-app-2
    spec:
      containers:
        - name: nginx-containers
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: app-html-2
