p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-apps-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: rihoy.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-app1
            port:
              number: 80
  - host: ahenault.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-app2
            port:
              number: 80
  - host: michen.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-app3
            port:
              number: 80
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-app3
              port:
                number: 80
